# MicroMet

./: .gitignore  .readthedocs.yaml  BSF_AMERIFLUX_output.ipynb  BSF_CS_output.ipynb  CITATION.cff  Eddy Lite Example.ipynb  LICENSE  Matheson.ipynb  Processing Steps.ipynb  README.md  Untitled.ipynb  Wellington High Frequency Review (1).ipynb  Wellington_CS_output.ipynb  ec.py  environment.yml  meta.yaml  pyproject.toml  setup.py  steps.txt
.github/workflows/: pypi-publish.yml  python-package-conda.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Notebooks/: Agrimet Data Compilation.ipynb  CS_Examples.ipynb  Convert table to ini.ipynb  DL_test.ipynb  DL_test_forAmeriFluxOutputOnly.ipynb  EC Test.ipynb  Meteo Examples.ipynb  Photo_timelapse_Google.ipynb  Processing Steps.ipynb  Soil_Heat_Flux_SoilVUE.ipynb  Spectral Example.ipynb  Spectral-Analysis.ipynb  US-UTE.html  Windrose.ipynb  config_parser.ipynb  example with flux-data-qaqc-test-new-code.ipynb  example with flux-data-qaqc.ipynb  footprint.ipynb  openet-et-4974925.csv  openet_phrag.csv  phrag.ipynb  soil_props.ipynb  units.json  utd_soil_data.csv  utd_soil_data.parquet
Notebooks/.ipynb_checkpoints/: DL_test-checkpoint.ipynb  DL_test_forAmeriFluxOutputOnly-checkpoint.ipynb  Untitled5-checkpoint.ipynb
Notebooks/Comparisons/: LI720vsIRGASON.ipynb
Notebooks/Flux QAQC and Prep/: QAQC_Wellington.ipynb
Notebooks/Footprints/: AMF_Daily.ipynb  LANDSAT GRIDS.ipynb  NLDAS_Download_and_Summarize.ipynb  download_big_rasters.ipynb  footprint.ipynb  multiply_rasters.ipynb  online_footprint_pre_post_process.ipynb  row_footprint.ipynb
Notebooks/High Freq Processing/: EC Test.ipynb  Eddy Lite Example.ipynb  Processing Steps.ipynb  Untitled5.ipynb  Untitled6.ipynb  eddy_pro_project_prep.ipynb  ffp_uses.ipynb
Notebooks/Old Notebooks/: GEE and SSEBOP ET (1).ipynb
_build/html/: about_ufn.html  index.html  (+6 more)
data/: EddyProVariables.csv  Example_High_Freq.csv  extreme_values.csv  reformatter_vars.yml
docs/: about_ufn.rst  conf.py  converter_docs.rst  getting_started.rst  index.rst  meteolib-docs.rst  modules.rst  requirements.txt  spectral-docs.rst
micromet/: Larry_Flux_Calc.py  __init__.py  bowen_ratio.py  constants.py  converter.py  cs_wrapper.py  csi_header_python.py  database_update.py  ec.py  evaplib.py  ffp.py  ffp_xr.py  footprint.py  footprint_plotting.py  graphs.py  headers.py  improved_ffp.py  licor_wrapper.py  meteolib.py  outlier_removal.py  reformatter_vars.yml  soil_heat.py  specplot.py  spectral.py  station_data_pull.py  tob_converter.py  tools.py  variable_checkers.py  volk.py
recipes/: meta.yaml
sql/: met_eddy_merge_view.sql  most_recent_date_met.sql  set_amfluxeddy_keys.sql
station_config/: US-CdM.ini  US-UTB.ini  US-UTD.ini  US-UTE.ini  US-UTJ.ini  US-UTM.ini  US-UTN.ini  US-UTP.ini  US-UTV.ini  US-UTW.ini  datafile.metadata  edpro_Cdm.metadata  edpro_UTB.metadata  edpro_UTD.metadata  edpro_UTE.metadata  edpro_UTV.metadata
tests/: converter_test.py  footprint_tests.py  meteolib_tests.py  outlier_removal_tests.py  pytest.ini  spectral-tests.py  test_converter.py  test_soil_heat.py
tests_micromet/: pytest.ini  test_conf.py  test_converter.py  test_ffp.py  test_outlier_removal.py  test_soil_heat.py
(+113 files in other folders)
