[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "micromet"
version = "0.1.0"
description = "A comprehensive Python package for micrometeorological data analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"},
    {name = "Kathryn Ladig", email = "kladig@utah.gov"}
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "plotly>=5.0",
    "rasterio>=1.2",
    "pyproj>=3.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.12",
    "myst-parser>=0.15",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
