[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "micromet"
description = "A comprehensive Python package for micrometeorological data analysis"
readme = "README.md"
version = "0.1.25"
requires-python = ">=3.11"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"},
    {name = "Kathryn Ladig", email = "kladig@utah.gov"}
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "plotly>=5.0",
    "sqlalchemy>=1.4",
    "pyyaml>=5.4",
    "requests>=2.25",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.12",
    "myst-parser>=0.15",
]
test = [
    "python>=3.11",
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}


[project.urls]
"Homepage" = "https://github.com/inkenbrandt/micromet"
"Documentation" = "https://micromet.readthedocs.io/en/stable/"
